fix dropdown small spacing issue

--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -228,7 +228,6 @@ nav.site-header {
                div.dropdown-menu{
                   background: #fff;
                   margin-top: -2px;
-                  margin-right: -1px;
                   width: auto;
                   position: absolute;
                   label{
